Some test additions from review
- Drops a redundant application test
- Adds tests for bad data into the Knockout init custom bindings
- Adds some more protection in the init bindings to avoid exceptions

--- a/src/js/tests/plugins/knockout_init.test.html
+++ b/src/js/tests/plugins/knockout_init.test.html
@@ -4,6 +4,9 @@
       <script type="application/json" data-bind="jsonInit: configJson">
         { "test": true }
       </script>
+      <script type="application/json" data-bind="jsonInit: configJsonBad">
+        TBD some bad JSON syntax
+      </script>
       <script type="text/plain" data-bind="textInit: configText">
         { "test": true }
       </script>
@@ -11,6 +14,7 @@
         <test true></test>
       </script>
       <input value="test: true" data-bind="valueInit: configValue" />
+      <input data-bind="valueInit: configValueMissing" />
     </div>
     <script type="module">
       import { expect } from "@open-wc/testing";
@@ -20,11 +24,16 @@
       import { Application } from "../../application";
       import { Registry } from "../../application/registry";
 
-      // Promises for async test assertions
+      // Future note: multiple promises here probably aren't necessary, but this
+      // is certainly a thorough way of testing that the field is bound and has
+      // been processed by Knockout. There is probably a less redundant pattern
+      // here though, if you are using this test as the base for a new test.
       let promiseJson;
+      let promiseJsonBad;
       let promiseHtml;
       let promiseText;
       let promiseValue;
+      let promiseValueMissing;
 
       const app = new Application();
 
@@ -35,6 +44,13 @@
           this.configJson = ko.observable();
           promiseJson = new Promise((resolve) => {
             this.configJson.subscribe((value) => {
+              resolve(value);
+            });
+          });
+
+          this.configJsonBad = ko.observable();
+          promiseJsonBad = new Promise((resolve) => {
+            this.configJsonBad.subscribe((value) => {
               resolve(value);
             });
           });
@@ -59,6 +75,13 @@
               resolve(value);
             });
           });
+
+          this.configValueMissing = ko.observable();
+          promiseValueMissing = new Promise((resolve) => {
+            this.configValueMissing.subscribe((value) => {
+              resolve(value);
+            });
+          });
         }
       }
 
@@ -67,21 +90,29 @@
 
       runTests(async () => {
         describe("Knockout init plugin", () => {
-          it("loads Json", async () => {
+          it("loads JSON", async () => {
             const dataJson = await promiseJson;
             expect(dataJson).to.deep.equal({ test: true });
           });
-          it("loads Text", async () => {
+          it("doesn't throw an exception for JSON with bad syntax", async () => {
+            const dataJsonBad = await promiseJsonBad;
+            expect(dataJsonBad).to.deep.equal({});
+          });
+          it("loads text", async () => {
             const dataText = await promiseText;
             expect(dataText).to.include('{ "test": true }');
           });
-          it("loads Html", async () => {
+          it("loads HTML", async () => {
             const dataHtml = await promiseHtml;
             expect(dataHtml).to.include("<test true></test>");
           });
-          it("loads Value", async () => {
+          it("loads value attribute", async () => {
             const dataValue = await promiseValue;
             expect(dataValue).to.deep.equal("test: true");
+          });
+          it("doesn't throw an exception for missing value attribute", async () => {
+            const dataValueMissing = await promiseValueMissing;
+            expect(dataValueMissing).to.equal("");
           });
         });
       });
